Fixing cart on mobile

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -141,7 +141,7 @@
   .cart-wrapper {
     padding-left: 24px;
     padding-top: 40px;
-    width: 90vw;
+    width: 100vw;
   }
 
   .cart-item {
